After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703275 - Segfault when searching (apparently) on multilines
Segfault when searching (apparently) on multilines
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
3.9.x
Other Linux
: Normal critical
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-06-28 17:09 UTC by Germán Poo-Caamaño
Modified: 2013-06-30 08:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
PDF test case (428.71 KB, application/x-force-download)
2013-06-28 17:09 UTC, Germán Poo-Caamaño
Details

Description Germán Poo-Caamaño 2013-06-28 17:09:54 UTC
Created attachment 248003 [details]
PDF test case

I am using evince and poppler master from today (4e2bf3ff and 263995, respectively).

1. I opened the PDF attached.
3. Ctrl+F to search
4. Tried to type: "at the"
I crashed just after the "t".

I was trying to search for a text that I knew was split in 2 lines (in the abstract).

I can reproduce the bug several times.  Once I had to click on the document, before searching (maybe I started to search quicker as soon as the document was being loaded).

Here is the backtrace (you might want to check the Thread #1):

Thread 1 (Thread 0xb5994ac0 (LWP 3207))

  • #0 sanitized_substring
    at ev-find-sidebar.c line 232
  • #1 get_surrounding_text_markup
  • #2 process_matches_idle
    at ev-find-sidebar.c line 427
  • #3 g_idle_dispatch
    at gmain.c line 5205
  • #4 g_main_dispatch
    at gmain.c line 3054
  • #5 g_main_context_dispatch
    at gmain.c line 3630
  • #6 g_main_context_iterate
    at gmain.c line 3701
  • #7 g_main_context_iterate
    at gmain.c line 3638
  • #8 g_main_context_iteration
    at gmain.c line 3762
  • #9 g_application_run
    at gapplication.c line 1623
  • #10 main
    at main.c line 332

Comment 1 Germán Poo-Caamaño 2013-06-28 21:39:01 UTC
FWIW, I was able to reproduce the same issue with another PDF.

I found out that it depends on the word I search first.  If I search another word first and then the one that made evince crash, it does not crash.
Comment 2 Germán Poo-Caamaño 2013-06-28 22:48:02 UTC
Another PDF to give a try is:

http://academic.patrick.wagstrom.net/publications/Jergensen_2011_TheOnionPatchMigrationInOpenSourceEcosystems.pdf?attredirects=0

Try:
1. Ctrl+F
2. Type: onion
3. Segfault
Comment 3 Carlos Garcia Campos 2013-06-30 08:00:31 UTC
Fixed in git master, we were entering an infinite loop. Also fixed the search results in multicolumn documents that was broken too. Thanks for reporting.