ev-find-sidebar: fix a crash due to an infinite loop resolving hyphenations

Do not try to resolve the hyphenation if the hyphen is the last
character of the chunk processed.

https://bugzilla.gnome.org/show_bug.cgi?id=703275